--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 
 canvas {
     border: 4px solid #ff6600;
-    border-radius: 8px;
+    border-radius: 12px;
     background-color: #feff9d;
 }
 
@@ -34,7 +34,7 @@ button {
     border-radius: 8px;
     border-color: #ff6600;
     font-family: inherit;
-    margin: 0;
+    margin: 10px;
     padding: 5px 20px;
     width: 100px;
 }
@@ -58,6 +58,7 @@ p {
 }
 
 @media (max-width: 440px) {
+    /* Aquí se acomodan los botones (resonsive) */
     button {
         margin-top: 25px;
     }
