--- a/style.css
+++ b/style.css
@@ -26,6 +26,64 @@ body {
     margin: 0;
     padding: 0;
 }
+/* PANTALLA DE INICIO */
+.welcome-message  {
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    border: 3px solid #fee6e2;
+    border-radius: 5px;
+    box-shadow: 0px  1px 30px #f8f7fc;
+    font-family: 'Roboto', sans-serif;
+    font-size: 35px;
+    color: #f8f7fc;
+    font-weight: 700;
+    row-gap: 65px;
+    padding: 40px 10px 50px 10px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    align-items: center;
+    background-image: url(./assets/Inicio1.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    justify-content: center;
+}
+
+.welcome-message .button--standar{
+    width: 55%;
+    height: 10%;
+    padding: 10px 0;
+    font-size: 18px;
+    cursor: pointer;
+    text-transform: uppercase;
+    background-color:#aaefec;
+    color: #51a1dc;
+    border: 3px solid #51a1dc;
+    box-shadow: 0px 0px 4px  5px white;
+    word-spacing: 4px;
+    letter-spacing: 4px;
+    text-align: center;
+}
+.fa-gamepad {
+    width: 100px;
+    height: 100px;
+    background-image: url(./assets/consola.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    
+}
+
+.fa-gamepad {
+    font-size: 60px;
+    color: #f8f7fc;
+}
+
 
 .game-container {
     display: flex;
@@ -96,4 +154,11 @@ button:not(:last-child) {
         margin-left: 100%;
         margin-right: 100%;
     }
+
+    .welcome-message .button--standar {
+        width: 80%;
+        height: 40px;
+        font-size: 16px;
+    }
+    
 }
