--- a/style.css
+++ b/style.css
@@ -69,6 +69,58 @@ body {
     letter-spacing: 4px;
     text-align: center;
 }
+/* MENSAJES DE JUEGO RECORD */
+.message--record {
+    position: absolute;
+    width: 300px;
+    height: auto;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    border: 2px solid #fee3e2;
+    border-radius: 5px;
+    box-shadow: 0px 1px 10px #fee3e2;
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    color: #fee3e2;
+    font-weight: 700;
+    row-gap: 15px;
+    padding: 10px 10px 20px 10px;
+    padding: absolute;
+    top: 40%;
+    left: calc(50% - 150px);
+    align-items: center;
+    background-image: url(./assets/fondo_record.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.message--record .button--standar {
+    cursor: pointer;
+    width: 100%;
+    padding: 10px 0;
+    font-size: 18px;
+    text-transform: uppercase;
+    background-color: #fee3e2; 
+    color: #e11116;
+    border: 2px  solid #e11116;
+    box-shadow: 0px 0px 4px 5px #fee3e2;
+    word-spacing: 3px;
+    letter-spacing: 2px;
+    text-align: center;
+}
+
+.fa-ranking-star{
+    font-size:40px;
+}
+
+.new--record {
+    font-size: 25px;
+    text-shadow: 0px 0px 15px #e11116;
+}
+
 .fa-gamepad {
     width: 100px;
     height: 100px;
